--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 websockets>=12.0
 pydantic>=2.0.0
+starlette>=0.27.0
 
 # MQTT
 paho-mqtt>=1.6.1
@@ -16,7 +17,7 @@ plotly>=5.18.0
 pandas>=2.1.0
 
 # OpenElectricity SDK
-openelectricity
+openelectricity>=0.9.0
 
 # Utilities
 python-dotenv>=1.0.0
